Mon Dec 20 16:46:58 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Okay, I'm still a newbie at this X stuff :) Made some
	optimisations to the main loop which speed things up a
	bunch.
	* Added better error handling when loading images.
	* The Q or q key can now be used to exit the app in any mode.

Mon Dec 20 15:22:43 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Added some utility functions, so I don't have to write
	if((s=malloc(blah))==NULL){fprintf("oops\n");exit(2);}
	15 million times. It really bugs me ;-)

Mon Dec 20 12:53:28 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Hehe. I like slideshow mode so much its now the default :)
	Having multiple images pop up one-per-window can be quite evil, so
	Slideshow mode is prefered. To open multiple images
	one-per-window, you now need to specify -w or -multiwindow.
	* I also fixed a couple of things, lowered slideshow overhead,
	tightened up the main loop somewhat, and a coupla things really
	late last night which I can't remember ;-)

Sun Dec 19 22:06:43 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* For packaging reasons, I have changed the scripts to run feh in
	the current dir, if it is there, but to fall back on the installed
	copy.

Sun Dec 19 20:29:33 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Added a .spec file for feh. Contributed by Alistair Sutton
	<metallica@freenet.co.uk>, (who is obviously a metallica fan ;), 
	and has written specs for me before ::) Thanks dude :)
	* Urm. I haven't actually tested this yet :)

Sun Dec 19 18:55:39 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Slideshow mode now has keyboard control ::)
	Mouse button 1 still changes slides, but you now have:
	p, P, <BACKSPACE>, <LEFT>  Goto previous slide
	n, N, <SPACE>, <RIGHT>     Goto next slide
	<HOME>                     Goto first slide
	<END>                      Goto last slide