@@ -125,12 +125,15 @@ progress (Imlib_Image im, char percent, int update_x, int update_y,
   imlib_context_set_drawable (progwin->bg_pmap);
   imlib_context_set_anti_alias (0);
   imlib_context_set_dither (0);
-  imlib_context_set_blend (0);
+  imlib_context_set_image (im);
+  if (imlib_image_has_alpha ())
+    imlib_context_set_blend (1);
+  else
+    imlib_context_set_blend (0);
+
   /* first time it's called */
-  D (("progwin->im_w %d\n", progwin->im_w));
   if (progwin->im_w == 0)
     {
-      imlib_context_set_image (im);
       progwin->w = progwin->im_w = imlib_image_get_width ();
       progwin->h = progwin->im_h = imlib_image_get_height ();
       if (!progwin->win)
@@ -156,20 +159,14 @@ progress (Imlib_Image im, char percent, int update_x, int update_y,
 	XMapWindow (disp, progwin->win);
       XSync (disp, False);
     }
-  imlib_context_set_drawable (progwin->bg_pmap);
   imlib_context_set_image (im);
+  imlib_context_set_drawable (progwin->bg_pmap);
   imlib_context_set_anti_alias (0);
   imlib_context_set_dither (0);
-  imlib_context_set_blend (1);
   imlib_render_image_part_on_drawable_at_size (update_x, update_y,
 					       update_w, update_h,
 					       update_x, update_y, update_w,
 					       update_h);
-  imlib_context_set_blend (0);
-  imlib_render_image_part_on_drawable_at_size (update_x, update_y,
-					       update_w, update_h,
-					       update_x, update_y,
-					       update_w, update_h);
   XSetWindowBackgroundPixmap (disp, progwin->win, progwin->bg_pmap);
   XClearArea (disp, progwin->win, update_x, update_y, update_w, update_h,
 	      False);
